# POC-log_based-replication

./: .gitignore  Makefile  README.md  docker-compose.yml  dockerfile  environment-setup.sh  local-env-example.sh  meltano.yml  pyproject.toml
infra/: .gitignore  custom-postgresql.conf  docker-compose.yml  dockerfile  duck-db-setup.sh  init-db.sh  postgres-reload-config.sh  setup.sh
infra/postgres/: add_column.sh  add_table.sh  delete_column.sh  delete_row.sh  refresh_data.sh  revoke_replication_permission.sh  revoke_select_permission.sh  transaction_first_record.sh  transaction_second_record.sh  update_column.sh
meltano/: meltano.yml
meltano/testing/: transaction_first_record.sh  transaction_second_record.sh
